--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Matches simulator app</string>
+    <string name="botao_de_simulaco_de_partidas">Match simulator button</string>
+    <string name="txt_versus" translatable="false">X</string>
 </resources>
